--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .app {
   width: 100vw;
   height: 100%;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
